# ER_CHAI

./: .gitignore  01a-YoY-PCE.csv  COMPLETE.md  INDEX.md  LLM_INTEGRATION_GUIDE.md  LLM_INTEGRATION_SUMMARY.md  MERGE_COMPLETE.md  MERGE_SUCCESS_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_LITELLM_INTEGRATION.md  TROUBLESHOOTING.md  VISUAL_OVERVIEW.md  check_integration_files.py  config.yaml.example  config.yaml.litellm.example  diagnose_litellm.py  pyproject.toml  recession_config.yaml  start-servers-fixed.ps1  start-servers.ps1  stop-servers.ps1  verify_llm_integration.py
backend/: main.py
backend/api/: middleware.py  routes.py
backend/models/: __init__.py  schemas.py
backend/services/: ai_assistant.py  chart_state_utils.py  config.py  export_service.py  fred_client.py  image_analyzer.py  ingestion.py  llm_client.py  project_store.py  recession_bands.py  summary_generator.py
deployment/: QUICKSTART.md  README.md
deployment/lightsail/: .env.example  .gitignore  config.yaml.example  docker-compose.yml  manage.sh  setup.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
tests/: conftest.py
tests/property/: test_data_table_bug.py  test_data_table_preservation.py  test_vertical_annotation_bug.py  test_vertical_annotation_preservation.py
tests/unit/: test_ai_assistant.py  test_api.py  test_chart_state.py  test_config.py  test_export.py  test_fred_client.py  test_image_analyzer.py  test_ingestion.py  test_project_store.py  test_summary.py
(+41 files in other folders)
